[package]
name = "rust_os"
version = "0.1.0"
authors = ["Jeff Hughes <jeff.hughes@gmail.com>"]
edition = "2018"

[profile.dev]
#panic = "abort"  # currently a bug in `cargo test`

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.11.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33  # (0x10 << 1) | 1